--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-date-picker-tis",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "description": "Date picker component for React",
   "author": "boof-tech",
   "license": "MIT",
@@ -53,6 +53,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "classnames": "^2.3.1",
+    "moment": "^2.29.3",
     "node-sass": "^4.14.1"
   }
 }
